# maple

./: .gitignore  LICENSE  README.md  build.sh  maple_test.py  mapple.env  mapple_test.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: python-app.yml
docs/: pull_request_template.md
examples/: multiple_specs.py  nested_get.py  nested_props.py  report.py  setup.py  should-satisfy.py  should_satisfy.py  single_spec.py  specs.py
maple/: __init__.py
mapple/: __init__.py  base_extensions.py
src/maple/: __init__.py  base_extensions.py  models.py  ops.py  report.py  utils.py
src/maple/templates/: report.html
templates/: report.html
tests/: .env.example  maple_test.py  test_multiple.py  test_objects.py  test_ops.py  test_report.py  test_results.py  test_run.py  test_should_satisfy.py
