[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maple-spec"
version = "0.0.4"
authors = [
  { name="Gizem Demirhan", email="gizemdemirhaan@gmail.com" },
  { name="Andres Buitrago", email="andrsbtrg@gmail.com" }
]
description = "A testing library for Speckle models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["specklepy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/andrsbtrg/maple"
Issues = "https://github.com/andrsbtrg/maple/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
